--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.ndjson": "jsonl",
         "*.dbclient-js": "javascript",
-        "q4.h": "c"
+        "q4.h": "c",
+        "stdio.h": "c"
     }
 }
