Implementa a padronização estrutural dos arquivos da Q4 e finaliza a documentação

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.ndjson": "jsonl",
         "*.dbclient-js": "javascript",
         "q4.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "stdlib.h": "c"
     }
 }
